# weasel

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build.yml  clippy.yml  rust.yml
src/: config.rs  database.rs  mail.rs  main.rs
src/database/: actor.rs  mod.rs  structures.rs
src/gui/: actor.rs  mod.rs  watchdog_actor.rs
src/mail/: actor.rs  agent.rs  imap_toolbox.rs  mod.rs
