[package]
name = "weasel"
description = "Trying my hand at an email client"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3

[workspace.lints.rust]
missing_abi = "warn"
missing_docs = "warn"
noop_method_call = "warn"
pointer_structural_match = "warn"
unreachable_pub = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_tuple_struct_fields = "warn"

[workspace.lints.clippy]
pedantic = "warn"
as_conversions = "warn"
dbg_macro = "warn"
empty_structs_with_brackets = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
let_underscore_must_use = "warn"
map_err_ignore = "warn"
missing_docs_in_private_items = "warn"
negative_feature_names = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_feature_names = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
rest_pat_in_fully_bound_structs = "warn"
str_to_string = "warn"
string_add = "warn"
string_slice = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
undocumented_unsafe_blocks = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unwrap_used = "warn"
wildcard_dependencies = "warn"

[lints]
workspace = true

[dependencies]
actix = "0.13.3"
druid = "0.8.3"
figment = { version = "0.10.15", features = ["toml", "env"] }
futures = "0.3.30"
imap = "2.4.1"
imap-proto = "0.10.2"
log = "0.4.21"
mail = "0.7.0"
native-tls = "0.2.11"
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
simple_logger = "4.3.3"
surrealdb = { version = "1.4.0", features = ["kv-mem"] }
time = { version = "0.3.36", features = ["parsing", "serde"] }
